--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
+  flutter_launcher_icons: ^0.9.0
+
 
 dev_dependencies:
   flutter_test:
@@ -19,3 +21,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+flutter_icons:
+  image_path: "assets/icon/icon.png"
+  android: true
+  ios: true
+
