--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
-name: coff_v_art
+name: flutter_application_1
 description: A new Flutter project.
 publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
-  dio: ^5.3.2
   flutter:
     sdk: flutter
-  http: ^1.1.0
-  flutter_launcher_icons: ^0.9.0
-
+  geolocator: ^10.0.1
+  google_maps_flutter: ^2.5.0
+  image_picker: ^1.0.4
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
@@ -21,9 +21,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-flutter_icons:
-  image_path: "assets/icon/icon.png"
-  android: true
-  ios: true
-
