--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "coff_v_art",
-    "short_name": "coff_v_art",
+    "name": "flutter_application_1",
+    "short_name": "flutter_application_1",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
